--- a/mystyle.css
+++ b/mystyle.css
@@ -21,6 +21,19 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+
+    /*Setting up the grid */
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+}
+
+/*Grid elements */
+
+#s1_header aside {
+    text-align: center;
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
 }
 
 /*--------  s2_trio  -------*/
@@ -98,3 +111,13 @@
 
 /*--------  s10_copyright  -------*/
 
+
+/*------------ media query for the page ------------ */
+/* -------------------------------------------------*/
+
+/*----- s1_header ----- */
+@media (max-width: 992px) {
+    #s1_header { height: 50vh;}
+    #s1_header .display-4 { font-size: 28px; }
+    #s1_header h5 { font-size: 16px;}
+}
